//
// (C) Copyright 2019-2021 Intel Corporation.
//
// SPDX-License-Identifier: BSD-2-Clause-Patent
//

syntax = "proto3";
package ctl;

option go_package = "github.com/daos-stack/daos/src/control/common/proto/ctl";

message CollectLogReq {
  string TargetFolder = 1;
  bool Stop = 2;
  string CustomLogs = 3;  
  bool JsonOutput = 4;
  string LogFunction = 5;
  string LogCmd = 6;
}

message CollectLogResp {
  int32 status = 1; // DAOS error code
}
